--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-scripts": "4.0.0",
     "styled-components": "5.3.1"
   },
+  "devDependencies": {
+    "@babel/runtime": "7.13.8",
+    "typescript": "4.1.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
